Fix CORS policy to allow all headers and methods